--- a/merge_include_viewstub/src/main/res/layout/activity_include_main.xml
+++ b/merge_include_viewstub/src/main/res/layout/activity_include_main.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -7,26 +9,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context="com.example.caizenghui.merge_include_viewstub.MainActivity">
 
     <Button
-        android:id="@+id/btn_barscanner"
-        android:text="bar scanner"
+        android:id="@+id/btn_include"
+        android:text="include"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/btn_weixin"
-        android:text="WEI XIN"
+        android:id="@+id/btn_merge"
+        android:text="merge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/btn_intent_service"
-        android:text="Intent Service"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/btn_include_merge_viewstub"
-        android:text="include_merge_viewstub"
+        android:id="@+id/btn_view_stub"
+        android:text="view_stub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
